--- a/build.gradle
+++ b/build.gradle
@@ -18,7 +18,7 @@ buildscript {
         classpath "org.greenrobot:greendao-gradle-plugin:$greendao_version" // add plugin
 
         // NOTE: Do not place your application dependencies here; they belong
-        // in the individual module build.gradle files
+        // in the individual app_module build.gradle files
     }
 }
 
