--- a/app/build.gradle
+++ b/app/build.gradle
@@ -3,50 +3,18 @@ apply plugin: 'org.greenrobot.greendao' // apply plugin 放在最后的话编译
 apply plugin: 'kotlin-android'
 apply plugin: 'kotlin-kapt'
 apply plugin: 'kotlin-android-extensions'
+apply from: '../app_module.gradle'
 
 android {
-    compileSdkVersion rootProject.ext.android.compileSdk
 
     // 默认配置
     defaultConfig {
         applicationId rootProject.ext.android.applicationId
-        minSdkVersion rootProject.ext.android.minSdk
-        targetSdkVersion rootProject.ext.android.targetSdk
-        versionCode rootProject.ext.android.versionCode
-        versionName rootProject.ext.android.versionName
-        testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
-    }
-
-    buildTypes {
-        release {
-            minifyEnabled false
-            proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
-        }
-    }
-    compileOptions {
-        sourceCompatibility = '1.8'
-        targetCompatibility = '1.8'
-    }
-
-    configurations.all {
-        resolutionStrategy.force 'com.google.code.findbugs:jsr305:1.3.9'
     }
 }
 
 dependencies {
-    implementation fileTree(include: ['*.jar'], dir: 'libs')
-    // support
-    implementation rootProject.ext.dependencies["androidSupportV7"]
-    implementation rootProject.ext.dependencies["recyclerviewV7"]
-    implementation rootProject.ext.dependencies["androidSupportConstraint"]
     implementation rootProject.ext.dependencies["bottomNavigation"]
-    // test
-    testImplementation rootProject.ext.dependencies["junitSupport"]
-    androidTestImplementation rootProject.ext.dependencies["supportTestRunner"]
-    androidTestImplementation rootProject.ext.dependencies["supportTestEspresso"]
-
-    // kotlin 支持
-    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
 
     // rxJavaPermissions
     implementation rootProject.ext.dependencies["rxpermissions"]
