MVVM 基类框架修改

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -26,4 +26,14 @@ dependencies {
     implementation rootProject.ext.dependencies["banner"]
     // ViewPager Indicator https://github.com/itrenjunhua/MagicIndicator
     implementation rootProject.ext.dependencies["magicIndicator"]
+
+    implementation project(":mvvm_mvvmbase")
+    implementation project(":lib_android_utils")
+    implementation project(":lib_android_view")
+    implementation project(":lib_loading_dialog")
+    implementation project(":lib_http")
+    implementation project(":lib_imageloader_interface")
+    implementation project(":lib_imageloader_glide")
+    implementation project(":lib_rpagestatuscontroller")
+    implementation project(":lib_android_cache")
 }
