--- a/gradle.properties
+++ b/gradle.properties
@@ -15,5 +15,5 @@ org.gradle.jvmargs=-Xmx1536m
 kotlin.code.style=official
 
 # 是否作为 Library  true：表示作为主App的Library依赖，false：表示每一个module作为一个独立的应用
-isBuildAsLibrary=false
-#isBuildAsLibrary=true
+#isBuildAsLibrary=false
+isBuildAsLibrary=true
