1.解决报错问题 2.增加自定义绑定内容

--- a/app_lib_common/build.gradle
+++ b/app_lib_common/build.gradle
@@ -15,9 +15,9 @@ dependencies {
     // greenDao https://github.com/greenrobot/greenDAO
     api rootProject.ext.dependencies["greendao"]
 
-    // MVPBase
     api project(':mvvm_mvvmbase')
     api project(':mvvm_rxsupport')
+    api project(':binding_custom')
     api project(':lib_http')
     api project(':lib_android_utils')
     api project(':lib_android_view')
